--- a/Views/Admin/TableData.cshtml
+++ b/Views/Admin/TableData.cshtml
@@ -54,6 +54,7 @@
         <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
+        <a class="w3-bar-item w3-button" href="@Url.Action("Index","Admin")">หน้าหลัก</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseCsAdmin","Admin")">หลักสูตรวิทย์คอม</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseTraAdmin","Admin")">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Admin")">เทียบโอนหลักสูตร</a>
@@ -115,6 +116,12 @@
                                    asp-route-id="@DataUser.Id">เทียบโอน</a>
                             </center>
                         </td>
+
+                        @* <td>
+                            <a class="btn btn-warning" asp-controller="Admin"
+                               asp-action="EditUser"
+                               asp-route-id="@DataUser.Transcode">แก้ไข</a>
+                        </td> *@
 
                         <td>
                             <a class="btn btn-danger" asp-controller="Admin"
