--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
             <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
             <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-            <a class="w3-bar-item w3-button w3-pale-blue">หน้าแรก</a>
+            <a class="w3-bar-item w3-button w3-pale-blue">หน้าหลัก</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("CourseCsAdmin","Admin")">หลักสูตรวิทย์คอม</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("CourseTraAdmin","Admin")">หลักสูตรปวส.</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Admin")">เทียบโอนหลักสูตร</a>
@@ -63,7 +63,7 @@
             <span class="w3-bar-item w3-border-bottom w3-large">User</span>
             <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-            <a class="w3-bar-item w3-button w3-pale-blue">หน้าแรก</a>
+            <a class="w3-bar-item w3-button w3-pale-blue">หน้าหลัก</a>
             <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">อัพโหลดไฟล์</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("FullCourseCs","Home")">หลักสูตรวิทย์คอม</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
