--- a/Views/Admin/TransferSub.cshtml
+++ b/Views/Admin/TransferSub.cshtml
@@ -69,7 +69,7 @@
                     <th>รหัสวิชาปวส.</th>
                     <th>ชื่อวิชาปวส.</th>
 
-                    <th>รายละเอียด</th>
+                    <th>คำอธิบายรายวิชา</th>
 
                 </tr>
             </thead>
