--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
     }
 </style>
 <body>
-    @if(UserManager.GetUserName(User) == "Admin" || UserManager.GetUserName(User) == "Admin."|| UserManager.GetUserName(User) == "Admin..")
+    @if (UserManager.GetUserName(User) == "Admin" || UserManager.GetUserName(User) == "Admin." || UserManager.GetUserName(User) == "Admin01" || UserManager.GetUserName(User) == "Admin02")
     {
         <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
             <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
