--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -33,6 +33,19 @@
                         <label asp-for="Input.LastName" class="form-label">นามสกุล</label>
                         <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </div>
+                    <div class="form-floating mb-3" hidden>
+                        <select asp-for="Input.Codecoursetra" class="form-control" aria-required="true" placeholder="รหัสหลักสูตรปวส.">
+                            <option hidden value=""></option>
+                            @foreach (var item in Model.TraCourse)
+                            {
+                                <option value="@item.Value">
+                                    @item.Text
+                                </option>
+                            }
+                        </select>
+                        <label asp-for="Input.Codecoursetra" class="form-label">หลักสูตร</label>
+                        <span asp-validation-for="Input.Codecoursetra" class="text-danger"></span>
+                    </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Input.Facebook" class="form-control">
                         <label asp-for="Input.Facebook" class="form-label">Facebook</label>
