--- a/Views/Admin/AddSubCs.cshtml
+++ b/Views/Admin/AddSubCs.cshtml
@@ -97,16 +97,18 @@
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Data.Subdescs">คำอธิบายรายวิชา</label>
-                    <input type="text" asp-for="Data.Subdescs" class="form-control">
-                    <span asp-validation-for="Data.Subdescs" class="text-danger"></span>
-                </div>
-
-                <div class="col-lg-3">
                     <label asp-for="Data.Status">สถานะ</label>
                     <input type="text" asp-for="Data.Status" class="form-control">
                     <span asp-validation-for="Data.Status" class="text-danger"></span>
                 </div>
+
+            <div class="row">
+                <div class="col-lg-3">
+                    <label asp-for="Data.Subdescs">คำอธิบายรายวิชา</label>
+                    <textarea rows="5" cols="70" asp-for="Data.Subdescs" class="form-control-lg"></textarea>
+                    <span asp-validation-for="Data.Subdescs" class="text-danger"></span>
+                </div>
+            </div>
 
             </div>
             <button type="submit" class="btn btn-primary my-3 col-lg-3">เพิ่ม</button>
