--- a/Views/Admin/AddSubTra.cshtml
+++ b/Views/Admin/AddSubTra.cshtml
@@ -84,7 +84,7 @@
 
                 <div class="col-lg-3">
                     <label asp-for="Data.Subdestra">คำอธิบายรายวิชา</label>
-                    <input type="text" asp-for="Data.Subdestra" class="form-control">
+                    <textarea rows="5" cols="70" asp-for="Data.Subdestra" class="form-control-lg" disabled></textarea>
                     <span asp-validation-for="Data.Subdestra" class="text-danger"></span>
                 </div>
 
