--- a/Views/Admin/TransferCourse.cshtml
+++ b/Views/Admin/TransferCourse.cshtml
@@ -82,7 +82,7 @@
                             <td>@TraCs.Namecoursetra</td>
 
                         <td><a class="btn btn-warning" asp-controller="Admin" asp-action="TransferSub" asp-route-id="@TraCs.CodeCoursetrans">ดูข้อมูล</a></td>
-                        <td><a class="btn btn-danger" asp-controller="Admin" asp-action="DeleteCourse" asp-route-id="@TraCs.CodeCoursetrans" onclick="return confirm('คุณต้องการลบหรือไม่')">ลบ</a></td>
+                        <td><a class="btn btn-danger" asp-controller="Admin" asp-action="DeleteCourseTrans" asp-route-id="@TraCs.CodeCoursetrans" onclick="return confirm('คุณต้องการลบ @TraCs.Namecoursecs-@TraCs.Namecoursetra หรือไม่')">ลบ</a></td>
                         </tr>
                     }
                 </tbody>
